package messages;

message Client{
	enum MessageType{
		FetchFile = 1;
		WriteToFile = 2;
		ReadFromFile = 3;
		SeekIndex = 4;
		Impeach = 5;
    ViableLeader = 6;
	}

	required uint64 messageId = 1;
	required MessageType messageType = 2;

	optional FetchFile fetchFile = 3;
	optional WriteToFile writeToFile = 4;
	optional ReadFromFile readFromFile = 5;
	optional SeekIndex seekIndex = 6;
	optional Impeach impeach = 7;
  optional ViableLeader viableLeader = 8;
}

message FetchFile{
	required string name = 1;
	required uint64 fileId = 2;
  required bool create = 3;
}

message WriteToFile{
	required uint64 fileId = 1;
	required bytes data = 2;
}

message ReadFromFile{
	required uint64 fileId = 1;
}

message SeekIndex{
	required uint64 fileId = 1;
	required uint64 index = 2;
}

message Impeach{
  required string name = 1;
}

message ViableLeader{
  required string name = 1;
	required uint64 index = 2;
}
